--- a/Css/Mainpage.css
+++ b/Css/Mainpage.css
@@ -44,5 +44,12 @@ nav a {
 }
 
 .column-left {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: black;
+    padding: 0rem 2rem;
 }
+
+.column-right
