--- a/Css/Mainpage.css
+++ b/Css/Mainpage.css
@@ -52,4 +52,20 @@ nav a {
     padding: 0rem 2rem;
 }
 
-.column-right
+.column-right h1 {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+}
+
+.column-left p {
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.5;
+}
+
+button {
+    padding: 1rem 3rem;
+    font-size: 1rem;
+    border: none;
+    color: darkgrey
+}
