--- a/Css/Mainpage.css
+++ b/Css/Mainpage.css
@@ -32,9 +32,10 @@ nav a {
     padding: 0 1.5rem;
 }
 
-.hero {
-    background-color: darkgray;
-}
+body {
+    background-image: url("/Images/ThumbnailNew.png");
+    background-color: #cccccc;
+   }
 
 .hero-container {
     display: grid;
@@ -67,5 +68,31 @@ button {
     padding: 1rem 3rem;
     font-size: 1rem;
     border: none;
-    color: darkgrey
+    color: darkgrey;
+    background: black;
+    cursor: pointer;
+    border-radius: 50px;
+}
+
+button:hover {
+    background: white;
+    color: black;
+}
+
+.column-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem 2rem;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .hero-container{
+        grid-template-columns: 1fr;
+    }
 }
