--- a/Testing/index.css
+++ b/Testing/index.css
@@ -17,8 +17,9 @@ body {
 
 nav {
     position: relative;
-    width: 524px;
-    height: 50px;
+    width: 585px;
+    height: 55px;
+    position: fixed;
     background: #474747;
     border-radius: 8px;
     display: flex;
@@ -41,8 +42,38 @@ nav span {
     position: absolute;
     top: 0;
     left: 0;
-    width: 95px;
+    width: 70px;
     height: 100%;
     background:linear-gradient(45deg, #2d3131, #3f3f3f);
     border-radius: 8px;
+    transition: .5s;
+}
+
+nav a:nth-child(1):hover~span {
+    left: 0;
+}
+
+nav a:nth-child(2):hover~span {
+    left: 88px;
+    width: 85px;
+}
+
+nav a:nth-child(3):hover~span {
+    left: 189px;
+    width: 90px;
+}
+
+nav a:nth-child(4):hover~span {
+    left: 295px;
+    width: 90px;
+}
+
+nav a:nth-child(5):hover~span {
+    left: 396px;
+    width: 85px;
+}
+
+nav a:nth-child(6):hover~span {
+    left: 495px;
+    width: 90px;
 }
