--- a/Testing/index.css
+++ b/Testing/index.css
@@ -24,7 +24,7 @@ nav {
   border-radius: 8px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: Top;
 }
 
 nav a {
