--- a/Testing/index.css
+++ b/Testing/index.css
@@ -20,11 +20,12 @@ nav {
   width: 585px;
   height: 55px;
   position: fixed;
+  top: 10px;
   background: #474747;
   border-radius: 8px;
   display: flex;
   justify-content: center;
-  align-items: Top;
+  align-items: center;
 }
 
 nav a {
