--- a/Css/index.css
+++ b/Css/index.css
@@ -7,6 +7,15 @@
   font-family: "Poppins", sans-serif;
 }
 
+header .logo {
+  color: white;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
 body {
   display: flex;
   justify-content: center;
