--- a/Css/index.css
+++ b/Css/index.css
@@ -7,6 +7,17 @@
   font-family: "Poppins", sans-serif;
 }
 
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header .logo {
   color: white;
   font-weight: 700;
