--- a/Css/index.css
+++ b/Css/index.css
@@ -38,7 +38,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(#5b6363, #6f7979);
-  background-image: url("Images/Blurred.png");
+  background-image: url("/Images/Blurred.png");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
