--- a/Css/index.css
+++ b/Css/index.css
@@ -4,6 +4,18 @@ html {
   scroll-behavior: smooth;
 }
 
+.ProfileIcon {
+  position: absolute;
+  top: 0;
+  left: -80px;
+  height: 85px;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+}
+
 header {
   position: absolute;
   top: 0;
