--- a/Css/index.css
+++ b/Css/index.css
@@ -147,3 +147,10 @@ nav a:nth-child(7):hover ~ span {
   left: 587px;
   width: 87px;
 }
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
