--- a/Css/index.css
+++ b/Css/index.css
@@ -162,7 +162,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #dad0d0;
   cursor: pointer;
   transition: border-color 0.25s;
 }
